Added new industry: ddd